--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/vue-fontawesome": "^0.1.10",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
-    "nuxt": "^2.14.0"
+    "nuxt": "^2.14.0",
+    "smooth-scroll": "^16.1.3"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
