--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/vue-fontawesome": "^0.1.10",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
+    "contentful": "^7.14.6",
     "nuxt": "^2.14.0",
     "smooth-scroll": "^16.1.3"
   },
